--- a/.do/app.yml
+++ b/.do/app.yml
@@ -1,8 +1,10 @@
 ---
+name: goodwill-hacking
+region: nyc
 alerts:
+  - rule: DEPLOYMENT_LIVE
   - rule: DEPLOYMENT_FAILED
   - rule: DOMAIN_FAILED
-
 ingress:
   rules:
     - component:
@@ -14,14 +16,20 @@ ingress:
         path:
           prefix: /
 
-name: goodwill-hacking
-region: nyc
-services:
-  static_sites:
-    - build_command: hugo --config hugo.toml --destination ./public
-      environment_slug: hugo
-      github:
-        branch: dev
-        deploy_on_push: true
-        repo: goodwillhacking/website
-      name: website
+static_sites:
+  - name: website
+    environment_slug: hugo
+    github:
+      branch: dev
+      deploy_on_push: true
+      repo: goodwillhacking/website
+    envs:
+      - key: HUGO_VERSION
+        value: "0.127.0"
+        scope: BUILD_TIME
+        type: GENERAL
+      - key: HUGO_EXTENDED
+        value: "1"
+        scope: BUILD_TIME
+        type: GENERAL
+    build_command: git submodule add -f https://github.com/khusika/FeelIt.git themes/FeelIt; hugo --config hugo.toml --destination ./public
